--- a/connect.html
+++ b/connect.html
@@ -41,6 +41,22 @@
             gap: 12px;
         }
         .device-name-display h2 { font-size: 24px; color: #1f2937; }
+
+        .connection-status-bar {
+            background: linear-gradient(90deg, #10b981 0%, #059669 100%);
+            color: white;
+            padding: 16px;
+            border-radius: 12px;
+            margin-bottom: 16px;
+            font-weight: 600;
+            text-align: center;
+            font-size: 16px;
+            display: none;
+        }
+        .connection-status-bar.active {
+            display: block;
+        }
+
         .btn {
             padding: 10px 20px;
             border: none;
@@ -63,17 +79,15 @@
             display: flex;
             gap: 12px;
             flex-wrap: wrap;
-            margin-top: 16px;
+            margin-bottom: 16px;
         }
         .status {
             padding: 12px;
             background: #f3f4f6;
             border-radius: 8px;
             font-size: 14px;
-            margin-top: 16px;
         }
         .status.online { background: #d1fae5; color: #065f46; }
-        .status.connected { background: #dbeafe; color: #1e40af; }
         .section {
             background: white;
             border-radius: 16px;
@@ -81,16 +95,20 @@
             margin-bottom: 20px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
+        .section h2 { margin-bottom: 16px; font-size: 20px; color: #1f2937; }
         .device-card {
             padding: 16px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             border-radius: 12px;
             color: white;
             margin-bottom: 12px;
-            cursor: pointer;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            gap: 12px;
+        }
+        .device-card.connected {
+            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
         }
         .drop-zone {
             border: 3px dashed #d1d5db;
@@ -209,6 +227,11 @@
             <button onclick="editDeviceName()" class="btn btn-primary">✏️ Edit</button>
         </div>
 
+        <!-- CONNECTION STATUS BAR - SYNCED REAL-TIME -->
+        <div class="connection-status-bar" id="connectionBar">
+            ✅ Connected to: <span id="connectedToName"></span>
+        </div>
+
         <div class="controls">
             <button onclick="discoverDevices()" class="btn btn-success">🔍 Discover</button>
             <button onclick="showMyQR()" class="btn btn-info">📱 QR Code</button>
@@ -220,7 +243,7 @@
         </div>
     </div>
 
-    <!-- Connected Devices -->
+    <!-- Connected Devices List -->
     <div class="section">
         <h2>📱 Connected Devices</h2>
         <div id="connectedDevices">
@@ -317,11 +340,12 @@
         let qrScanner = null;
         let connectedTo = null;
         let receivedFiles = new Map();
+        let syncInterval = null;
 
         window.onload = function() {
             console.log('🚀 LocalDrop Starting...');
 
-            // Get or create device ID
+            // Get or create device ID (PERMANENT)
             myDeviceId = localStorage.getItem('deviceId');
             if (!myDeviceId) {
                 myDeviceId = 'DEV-' + Date.now() + '-' + Math.random().toString(36).substring(2, 8);
@@ -334,13 +358,16 @@
 
             document.getElementById('currentDeviceName').textContent = myDeviceName;
 
-            console.log('✅ Device initialized:', { id: myDeviceId, name: myDeviceName });
+            console.log('✅ Device:', { id: myDeviceId, name: myDeviceName });
 
             // Start heartbeat
             startHeartbeat();
 
             // Start listening for incoming files
             startFileListener();
+
+            // CRITICAL: Start real-time sync
+            startRealTimeSync();
 
             // Setup drag & drop
             setupDragDrop();
@@ -351,50 +378,63 @@
             }
         };
 
-        // HEARTBEAT - Keep device visible
+        // HEARTBEAT - Keep device visible (every 1 second for instant sync)
         function startHeartbeat() {
             setInterval(() => {
                 const deviceData = {
                     id: myDeviceId,
                     name: myDeviceName,
-                    timestamp: Date.now()
+                    timestamp: Date.now(),
+                    connectedTo: connectedTo ? connectedTo.id : null
                 };
                 localStorage.setItem('device_' + myDeviceId, JSON.stringify(deviceData));
-            }, 2000);
+            }, 1000);
         }
 
-        // LISTEN FOR INCOMING FILES
-        function startFileListener() {
-            setInterval(() => {
-                // Listen for files sent TO this device
-                for (let i = 0; i < localStorage.length; i++) {
-                    const key = localStorage.key(i);
+        // REAL-TIME SYNC - Update every 500ms for instant connection display
+        function startRealTimeSync() {
+            syncInterval = setInterval(() => {
+                // Update connection status bar on BOTH devices
+                updateConnectionStatusBar();
 
-                    // Look for files: transfer_FROM_TO
-                    if (key && key.startsWith('transfer_') && key.endsWith('_' + myDeviceId)) {
-                        try {
-                            const fileData = JSON.parse(localStorage.getItem(key));
+                // Sync device list
+                syncDeviceConnections();
 
-                            // Only process if not already received
-                            if (!receivedFiles.has(key)) {
-                                console.log('📥 Incoming file:', fileData.fileName);
-                                receivedFiles.set(key, fileData);
-                                addReceivedFile(fileData.fileName, fileData.size);
+                // Check if other device sees us as connected
+                checkRemoteConnection();
 
-                                // Show in connected devices that file was received
-                                updateConnectedDevices();
-                                showToast('📥 Received: ' + fileData.fileName);
-                            }
-                        } catch (e) {
-                            console.error('Error reading file:', e);
+            }, 500); // Every 500ms for real-time feel
+        }
+
+        // Update the connection status bar at top
+        function updateConnectionStatusBar() {
+            const bar = document.getElementById('connectionBar');
+
+            if (connectedTo) {
+                // Check if remote device still has us in their connectedTo
+                const remoteDeviceData = localStorage.getItem('device_' + connectedTo.id);
+                if (remoteDeviceData) {
+                    try {
+                        const data = JSON.parse(remoteDeviceData);
+                        if (data.connectedTo === myDeviceId) {
+                            // Both connected!
+                            bar.classList.add('active');
+                            document.getElementById('connectedToName').textContent = connectedTo.name;
+                            return;
                         }
-                    }
+                    } catch (e) {}
                 }
-            }, 500); // Check every 500ms for new files
+
+                // Else, just show we're connected (waiting for them)
+                bar.classList.add('active');
+                document.getElementById('connectedToName').textContent = connectedTo.name + ' (waiting for response)';
+            } else {
+                bar.classList.remove('active');
+            }
         }
 
-        function discoverDevices() {
-            console.log('🔍 Discovering devices...');
+        // Sync device list continuously
+        function syncDeviceConnections() {
             const devices = [];
             const now = Date.now();
 
@@ -412,33 +452,66 @@
                 }
             }
 
-            console.log('✅ Found devices:', devices.length);
+            // Update UI every 500ms
             updateDevicesList(devices);
+        }
+
+        // Check if remote device sees us as connected
+        function checkRemoteConnection() {
+            if (!connectedTo) return;
+
+            const remoteData = localStorage.getItem('device_' + connectedTo.id);
+            if (remoteData) {
+                try {
+                    const data = JSON.parse(remoteData);
+                    if (data.connectedTo === myDeviceId) {
+                        // Remote device also connected to us!
+                        updateStatus('✅ SYNCED: Both Connected to ' + connectedTo.name, 'online');
+                    }
+                } catch (e) {}
+            }
+        }
+
+        function discoverDevices() {
+            console.log('🔍 Discovering...');
+            discoverDevices(); // Will trigger updateDevicesList
         }
 
         function updateDevicesList(devices) {
             const container = document.getElementById('connectedDevices');
 
+            // IMPORTANT: Show list even if connected
             if (devices.length === 0) {
-                container.innerHTML = '<p style="color: #6b7280; text-align: center; padding: 20px;">No devices found</p>';
+                container.innerHTML = '<p style="color: #6b7280; text-align: center; padding: 20px;">No devices found. Make sure other devices are open.</p>';
                 return;
             }
 
             container.innerHTML = '';
             devices.forEach(device => {
                 const isConnected = connectedTo && connectedTo.id === device.id;
+                const remoteConnectedToMe = device.connectedTo === myDeviceId;
+                const bothConnected = isConnected && remoteConnectedToMe;
+
                 const card = document.createElement('div');
                 card.className = 'device-card';
-                card.style.background = isConnected ? 'linear-gradient(135deg, #10b981 0%, #059669 100%)' : 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)';
 
-                const status = isConnected ? '✅ Connected' : 'Click to connect';
+                // Color coding
+                if (bothConnected) {
+                    card.classList.add('connected');
+                    card.style.background = 'linear-gradient(135deg, #10b981 0%, #059669 100%)';
+                }
+
+                const status = bothConnected ? '✅ Both Connected' : 
+                               isConnected ? '📤 Waiting for response' :
+                               remoteConnectedToMe ? '📥 Waiting for my response' :
+                               'Click to connect';
 
                 const btn = isConnected ? 
                     `<button onclick="disconnectDevice()" class="btn btn-danger" style="padding: 8px 12px;">Disconnect</button>` :
                     `<button onclick="connectToDevice({id: '${device.id}', name: '${device.name}'})" class="btn" style="background: rgba(255,255,255,0.2); color: white; padding: 8px 12px;">Connect</button>`;
 
                 card.innerHTML = `
-                    <div>
+                    <div style="flex: 1;">
                         <div style="font-weight: 600; margin-bottom: 4px;">📱 ${device.name}</div>
                         <div style="font-size: 12px; opacity: 0.9;">${status}</div>
                     </div>
@@ -449,37 +522,61 @@
         }
 
         function connectToDevice(device) {
-            console.log('📞 Connected to:', device.name);
-
+            console.log('📞 Connecting to:', device.name);
             connectedTo = device;
-            updateStatus('✅ Connected to ' + device.name, 'connected');
-            updateDevicesList(getDevicesList());
-            showToast('✅ Connected to ' + device.name);
+
+            // Broadcast connection immediately
+            const deviceData = {
+                id: myDeviceId,
+                name: myDeviceName,
+                timestamp: Date.now(),
+                connectedTo: device.id
+            };
+            localStorage.setItem('device_' + myDeviceId, JSON.stringify(deviceData));
+
+            updateConnectionStatusBar();
+            updateStatus('📤 Connecting to ' + device.name + '...', 'online');
+            showToast('📤 Connecting to ' + device.name);
         }
 
         function disconnectDevice() {
             connectedTo = null;
+
+            // Update connection status
+            const deviceData = {
+                id: myDeviceId,
+                name: myDeviceName,
+                timestamp: Date.now(),
+                connectedTo: null
+            };
+            localStorage.setItem('device_' + myDeviceId, JSON.stringify(deviceData));
+
+            updateConnectionStatusBar();
             updateStatus('✅ Ready to connect', 'online');
-            discoverDevices();
+            syncDeviceConnections();
             showToast('🔌 Disconnected');
         }
 
-        function getDevicesList() {
-            const devices = [];
-            const now = Date.now();
+        // LISTEN FOR INCOMING FILES
+        function startFileListener() {
+            setInterval(() => {
+                for (let i = 0; i < localStorage.length; i++) {
+                    const key = localStorage.key(i);
 
-            for (let i = 0; i < localStorage.length; i++) {
-                const key = localStorage.key(i);
-                if (key && key.startsWith('device_')) {
-                    try {
-                        const device = JSON.parse(localStorage.getItem(key));
-                        if (now - device.timestamp < 15000 && device.id !== myDeviceId) {
-                            devices.push(device);
-                        }
-                    } catch (e) {}
+                    if (key && key.startsWith('transfer_') && key.endsWith('_' + myDeviceId)) {
+                        try {
+                            const fileData = JSON.parse(localStorage.getItem(key));
+
+                            if (!receivedFiles.has(key)) {
+                                console.log('📥 Received:', fileData.fileName);
+                                receivedFiles.set(key, fileData);
+                                addReceivedFile(fileData.fileName, fileData.size);
+                                showToast('📥 Received: ' + fileData.fileName);
+                            }
+                        } catch (e) {}
+                    }
                 }
-            }
-            return devices;
+            }, 300);
         }
 
         function editDeviceName() {
@@ -589,16 +686,14 @@
                 const fileId = 'transfer_' + myDeviceId + '_' + connectedTo.id + '_' + Date.now();
                 addTransferItem(fileId, file.name, file.size);
 
-                // Read file as base64
                 const reader = new FileReader();
                 reader.onload = function() {
-                    const base64 = reader.result.split(',')[1]; // Remove data URL prefix
+                    const base64 = reader.result.split(',')[1];
 
-                    // Send file data via localStorage
                     const fileData = {
                         id: fileId,
                         fileName: file.name,
-                        fileSize: file.size,
+                        size: file.size,
                         fileType: file.type,
                         fromDevice: myDeviceId,
                         fromDeviceName: myDeviceName,
@@ -607,12 +702,9 @@
                         timestamp: Date.now()
                     };
 
-                    // Store in localStorage (REAL TRANSFER!)
                     localStorage.setItem(fileId, JSON.stringify(fileData));
+                    console.log('📤 File sent:', file.name);
 
-                    console.log('📤 File sent to localStorage:', file.name);
-
-                    // Simulate progress
                     let progress = 0;
                     const interval = setInterval(() => {
                         progress += 20;
@@ -624,7 +716,7 @@
                         } else {
                             updateTransferProgress(fileId, progress);
                         }
-                    }, 200);
+                    }, 150);
                 };
 
                 reader.readAsDataURL(file);
@@ -634,7 +726,6 @@
         function addTransferItem(fileId, fileName, fileSize) {
             const item = document.createElement('div');
             item.className = 'transfer-item';
-            item.id = 'transfer-' + fileId;
             item.innerHTML = `
                 <div style="display: flex; justify-content: space-between; margin-bottom: 8px;">
                     <div style="font-weight: 600;">📤 ${fileName}</div>
@@ -658,7 +749,7 @@
             const div = document.createElement('div');
             div.className = 'received-file';
             div.innerHTML = `
-                <div>
+                <div style="flex: 1;">
                     <div style="font-weight: 600;">📥 ${fileName}</div>
                     <div style="font-size: 12px; opacity: 0.9;">${formatFileSize(fileSize)}</div>
                 </div>
@@ -703,10 +794,6 @@
             document.getElementById('connectionStatus').className = 'status ' + cls;
         }
 
-        function updateConnectedDevices() {
-            discoverDevices();
-        }
-
         function showToast(msg) {
             const toast = document.createElement('div');
             toast.textContent = msg;
@@ -724,9 +811,6 @@
             document.body.appendChild(toast);
             setTimeout(() => toast.remove(), 3000);
         }
-
-        // Auto-discover every 5 seconds
-        setInterval(discoverDevices, 5000);
     </script>
 </body>
 </html>
