--- a/discover.html
+++ b/discover.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LocalDrop - Discover Devices</title>
+    <title>LocalDrop - Device Discovery</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -46,19 +47,14 @@
             text-align: center;
         }
         .discovery-status {
-            background: #fef3c7;
-            border: 2px solid #fbbf24;
-            color: #92400e;
+            background: #dbeafe;
+            border: 2px solid #3b82f6;
+            color: #1e40af;
             padding: 16px;
             border-radius: 12px;
             margin-bottom: 16px;
             text-align: center;
             font-weight: 600;
-        }
-        .discovery-status.active {
-            background: #dbeafe;
-            border-color: #3b82f6;
-            color: #1e40af;
         }
         .btn {
             padding: 10px 20px;
@@ -94,12 +90,10 @@
         .device-card.found {
             background: linear-gradient(135deg, #10b981 0%, #059669 100%);
         }
-        .device-info-text {
-            flex: 1;
-        }
+        .device-info-text { flex: 1; }
         .device-name { font-weight: 600; margin-bottom: 4px; }
         .device-subnet { font-size: 12px; opacity: 0.9; }
-        .btn-select { padding: 8px 12px; font-size: 12px; background: rgba(255,255,255,0.2); border: 1px solid white; color: white; }
+        .btn-select { padding: 8px 12px; font-size: 12px; background: rgba(255,255,255,0.2); border: 1px solid white; color: white; cursor: pointer; }
         .controls {
             display: flex;
             gap: 12px;
@@ -143,6 +137,8 @@
             padding: 32px;
             max-width: 500px;
             width: 90%;
+            max-height: 90vh;
+            overflow-y: auto;
         }
         .modal-header {
             display: flex;
@@ -151,59 +147,105 @@
             margin-bottom: 24px;
         }
         .close-btn { background: none; border: none; font-size: 32px; cursor: pointer; color: #6b7280; }
+        .qr-container { text-align: center; margin: 20px 0; }
+        #qrcode { display: inline-block; }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>🔍 LocalDrop - Device Discovery</h1>
+        <h1>🔍 LocalDrop - Device Discovery (GitHub Pages Only)</h1>
     </div>
 
     <div class="device-info">
         <div class="device-name-display">
             <div>
                 <h2 id="myDeviceName">Device</h2>
-                <p style="font-size: 14px; color: #6b7280;">Your Device (Broadcaster)</p>
+                <p style="font-size: 14px; color: #6b7280;">Your Device</p>
             </div>
             <button onclick="editDeviceName()" class="btn btn-primary">✏️ Edit Name</button>
         </div>
 
         <div class="lan-info" id="lanInfo">
-            📡 Network: Loading...
+            📡 Network: Detecting...
         </div>
 
-        <div class="discovery-status active" id="discoveryStatus">
-            🔄 BROADCASTING on local network... (Updates: every 1 second)
+        <div class="discovery-status" id="discoveryStatus">
+            📡 BROADCASTING your device ID... (Click "Show QR" to let others find you)
         </div>
 
         <div class="controls">
-            <button onclick="startDiscovery()" class="btn btn-success">🔍 Scan for Devices</button>
-            <button onclick="refreshDiscovery()" class="btn btn-success">🔄 Refresh</button>
+            <button onclick="showMyQR()" class="btn btn-success">📱 Show My QR Code</button>
+            <button onclick="startManualDiscovery()" class="btn btn-success">🔍 Manual Connect (Paste ID)</button>
         </div>
 
         <div class="tech-info">
-            <strong>🔧 How Discovery Works:</strong><br>
-            1. Your device broadcasts heartbeat to localStorage every 1 second<br>
-            2. Other devices on same LAN read your heartbeat<br>
-            3. You receive signals from OTHER devices (same LAN)<br>
-            4. Devices match on same subnet (192.168.1.x)<br>
-            5. All devices visible to each other
+            <strong>🔧 How It Works (GitHub Pages Only):</strong><br>
+            1. No server needed - 100% GitHub Pages<br>
+            2. Your device shows QR code with: ID + Name + Subnet<br>
+            3. Other devices scan QR or manually enter your ID<br>
+            4. Direct P2P connection established<br>
+            5. File transfer begins (no server involved)
         </div>
     </div>
 
     <div class="section">
-        <h2>📱 Devices Found on Your LAN</h2>
-        <div id="discoveredDevices">
-            <p style="color: #6b7280; text-align: center; padding: 20px;">
-                🔄 Scanning... (devices on same 192.168.1.x will appear here)
-            </p>
+        <h2>📱 Manual Device Connection</h2>
+        <div>
+            <p style="color: #6b7280; margin-bottom: 12px;">On the other device:</p>
+            <ol style="color: #6b7280; margin-left: 20px; font-size: 14px;">
+                <li>Open this same page on your device</li>
+                <li>On Device A: Click "Show My QR Code"</li>
+                <li>On Device B: Scan the QR OR paste Device A's ID</li>
+                <li>Both devices connected! Transfer files</li>
+            </ol>
         </div>
     </div>
 
     <div class="footer">
-        <p><strong>📡 LOCAL DISCOVERY:</strong> No server needed! Uses localStorage heartbeat system for local network broadcast.</p>
+        <p><strong>✅ 100% GitHub Pages:</strong> No backend server needed. Pure client-side P2P file sharing.</p>
         <p style="margin-top: 8px;">Made with <strong style="color: #ef4444;">❤️</strong> in India by <strong>PROGRAMMER MJ</strong></p>
     </div>
 
+    <!-- QR Code Modal -->
+    <div id="qrModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>📱 Your Device ID & QR Code</h3>
+                <button class="close-btn" onclick="closeModal('qrModal')">×</button>
+            </div>
+            <div style="text-align: center; margin-bottom: 24px;">
+                <p style="margin-bottom: 16px; color: #6b7280;"><strong>Share this QR code:</strong></p>
+                <div class="qr-container">
+                    <div id="qrcode"></div>
+                </div>
+                <div style="margin-top: 16px; padding: 12px; background: #f3f4f6; border-radius: 8px;">
+                    <p style="font-size: 12px; color: #6b7280; margin-bottom: 8px;">Or share this Device ID:</p>
+                    <p id="deviceIdText" style="font-family: monospace; font-weight: 600; color: #1f2937; word-break: break-all;"></p>
+                    <button onclick="copyDeviceId()" class="btn btn-primary" style="margin-top: 8px;">📋 Copy ID</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Manual Connect Modal -->
+    <div id="manualModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>📥 Connect to Other Device</h3>
+                <button class="close-btn" onclick="closeModal('manualModal')">×</button>
+            </div>
+            <div style="margin-bottom: 24px;">
+                <p style="color: #6b7280; margin-bottom: 8px;">Paste the other device's ID:</p>
+                <input type="text" id="otherDeviceId" placeholder="Device ID" style="width: 100%; padding: 12px; border: 2px solid #e5e7eb; border-radius: 8px; margin-bottom: 12px; font-family: monospace;">
+                <div style="display: flex; gap: 12px;">
+                    <button onclick="closeModal('manualModal')" class="btn" style="background: #e5e7eb; color: #1f2937; flex: 1;">Cancel</button>
+                    <button onclick="connectManually()" class="btn btn-primary" style="flex: 1;">🔗 Connect</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Name Modal -->
     <div id="nameModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -212,6 +254,7 @@
             </div>
             <div style="margin-bottom: 24px;">
                 <input type="text" id="deviceNameInput" maxlength="20" style="width: 100%; padding: 12px; border: 2px solid #e5e7eb; border-radius: 8px;">
+                <p style="font-size: 12px; color: #6b7280; margin-top: 8px;"><span id="charCount">0</span>/20</p>
             </div>
             <div style="display: flex; gap: 12px; justify-content: flex-end;">
                 <button onclick="closeModal('nameModal')" class="btn" style="background: #e5e7eb; color: #1f2937;">Cancel</button>
@@ -224,12 +267,9 @@
         let myDeviceId = '';
         let myDeviceName = '';
         let lanData = null;
-        let discoveryInterval = null;
-        let broadcastInterval = null;
-        let foundDevices = new Map();
 
         window.onload = function() {
-            console.log('🔍 Discovery Page Loading...');
+            console.log('🔍 Discovery Page - GitHub Pages Only');
 
             // Get LAN data
             const lanInfo = localStorage.getItem('deviceLANInfo');
@@ -237,14 +277,13 @@
                 lanData = JSON.parse(lanInfo);
                 console.log('✅ LAN Data:', lanData);
             } else {
-                console.error('❌ No LAN data found');
                 alert('Please run lan-detector.html first!');
                 window.location.href = 'lan-detector.html';
                 return;
             }
 
             // Initialize device
-            myDeviceId = localStorage.getItem('deviceId') || 'DEV-' + Date.now();
+            myDeviceId = localStorage.getItem('deviceId') || 'DEV-' + Date.now().toString(36).toUpperCase();
             myDeviceName = localStorage.getItem('deviceName') || 'Device-' + Math.floor(Math.random() * 9000);
 
             localStorage.setItem('deviceId', myDeviceId);
@@ -254,186 +293,59 @@
             document.getElementById('lanInfo').textContent = '📡 Network: ' + lanData.subnet + '.x | Your IP: ' + lanData.ip;
 
             console.log('✅ Device:', { id: myDeviceId, name: myDeviceName });
-
-            // START BROADCASTING
-            startBroadcasting();
-
-            // START DISCOVERY
-            startDiscovery();
         };
 
-        // ===== STEP 1: BROADCASTING =====
-        function startBroadcasting() {
-            console.log('📡 Starting broadcast...');
+        function showMyQR() {
+            const qrData = 'LOCALDROP:' + myDeviceId + ':' + myDeviceName + ':' + lanData.subnet;
 
-            // Clear old broadcasts
-            broadcastInterval = setInterval(() => {
-                const heartbeat = {
-                    id: myDeviceId,
-                    name: myDeviceName,
-                    subnet: lanData.subnet,
-                    ip: lanData.ip,
-                    timestamp: Date.now(),
-                    type: 'broadcast'
-                };
+            document.getElementById('deviceIdText').textContent = myDeviceId;
 
-                // Store broadcast signal in localStorage
-                const broadcastKey = 'broadcast_' + myDeviceId + '_' + Date.now();
-                localStorage.setItem(broadcastKey, JSON.stringify(heartbeat));
+            const container = document.getElementById('qrcode');
+            container.innerHTML = '';
 
-                console.log('📡 Broadcast sent:', myDeviceName);
+            new QRCode(container, {
+                text: qrData,
+                width: 256,
+                height: 256,
+                colorDark: '#1f2937',
+                colorLight: '#ffffff'
+            });
 
-                // Clean old broadcasts (older than 10 seconds)
-                cleanOldBroadcasts();
-
-            }, 1000); // Every 1 second
+            document.getElementById('qrModal').classList.add('show');
         }
 
-        // Clean old broadcast signals
-        function cleanOldBroadcasts() {
-            const now = Date.now();
-            for (let i = localStorage.length - 1; i >= 0; i--) {
-                const key = localStorage.key(i);
-                if (key && key.startsWith('broadcast_')) {
-                    try {
-                        const data = JSON.parse(localStorage.getItem(key));
-                        // Remove if older than 15 seconds
-                        if (now - data.timestamp > 15000) {
-                            localStorage.removeItem(key);
-                        }
-                    } catch (e) {}
-                }
-            }
+        function copyDeviceId() {
+            const deviceId = document.getElementById('deviceIdText').textContent;
+            navigator.clipboard.writeText(deviceId).then(() => {
+                alert('✅ Device ID copied!');
+            });
         }
 
-        // ===== STEP 2: DISCOVERY =====
-        function startDiscovery() {
-            console.log('🔍 Starting discovery...');
-
-            discoveryInterval = setInterval(() => {
-                discoverDevices();
-            }, 500); // Scan every 500ms for fast discovery
+        function startManualDiscovery() {
+            document.getElementById('manualModal').classList.add('show');
         }
 
-        function discoverDevices() {
-            const now = Date.now();
-            const newDevices = new Map();
+        function connectManually() {
+            const otherId = document.getElementById('otherDeviceId').value.trim();
 
-            // Scan localStorage for broadcasts
-            for (let i = 0; i < localStorage.length; i++) {
-                const key = localStorage.key(i);
-
-                if (key && key.startsWith('broadcast_')) {
-                    try {
-                        const device = JSON.parse(localStorage.getItem(key));
-
-                        // IMPORTANT: Check conditions
-                        // 1. Not my own broadcast
-                        // 2. Same subnet
-                        // 3. Fresh signal (within 15 seconds)
-
-                        if (device.id === myDeviceId) {
-                            console.log('⏭️  Ignoring own broadcast');
-                            continue;
-                        }
-
-                        if (device.subnet !== lanData.subnet) {
-                            console.log('❌ Different subnet:', device.subnet, 'vs', lanData.subnet);
-                            continue;
-                        }
-
-                        if (now - device.timestamp > 15000) {
-                            console.log('⏱️  Stale signal:', device.name);
-                            continue;
-                        }
-
-                        // Device found!
-                        const deviceKey = device.id;
-
-                        if (!foundDevices.has(deviceKey)) {
-                            console.log('✅ NEW DEVICE FOUND:', device.name, device.subnet);
-                        }
-
-                        newDevices.set(deviceKey, {
-                            id: device.id,
-                            name: device.name,
-                            subnet: device.subnet,
-                            ip: device.ip,
-                            timestamp: device.timestamp
-                        });
-
-                    } catch (e) {
-                        console.error('Error parsing broadcast:', e);
-                    }
-                }
-            }
-
-            foundDevices = newDevices;
-            updateDevicesList();
-        }
-
-        function updateDevicesList() {
-            const container = document.getElementById('discoveredDevices');
-
-            if (foundDevices.size === 0) {
-                container.innerHTML = `
-                    <p style="color: #6b7280; text-align: center; padding: 20px;">
-                        🔄 Scanning for devices on ${lanData.subnet}.x...<br>
-                        <span style="font-size: 12px; margin-top: 8px;">
-                        If no devices appear, make sure:<br>
-                        ✅ Other devices opened this page<br>
-                        ✅ They're on same WiFi (${lanData.subnet}.x)<br>
-                        ✅ Wait 5-10 seconds for detection
-                        </span>
-                    </p>
-                `;
+            if (!otherId) {
+                alert('Enter device ID');
                 return;
             }
 
-            container.innerHTML = '';
-            foundDevices.forEach((device, deviceId) => {
-                const card = document.createElement('div');
-                card.className = 'device-card found';
-
-                const timeSinceSignal = Date.now() - device.timestamp;
-                const status = timeSinceSignal < 2000 ? '✅ Active' : '⏳ Standby';
-
-                card.innerHTML = `
-                    <div class="device-info-text">
-                        <div class="device-name">📱 ${device.name}</div>
-                        <div class="device-subnet">
-                            🌐 ${device.ip} | ${status} | Signal: ${Math.round(timeSinceSignal / 1000)}s ago
-                        </div>
-                    </div>
-                    <button onclick="selectDevice('${device.id}', '${device.name}')" class="btn btn-select">
-                        ✅ Select
-                    </button>
-                `;
-
-                container.appendChild(card);
-            });
-
-            console.log('📊 Devices found:', foundDevices.size);
-        }
-
-        function refreshDiscovery() {
-            console.log('🔄 Refreshing discovery...');
-            foundDevices.clear();
-            discoverDevices();
-        }
-
-        function selectDevice(deviceId, deviceName) {
-            console.log('✅ Selected:', deviceName);
+            console.log('🔗 Connecting to:', otherId);
 
             // Store selected device
             localStorage.setItem('selectedDevice', JSON.stringify({
-                id: deviceId,
-                name: deviceName,
-                timestamp: Date.now()
+                id: otherId,
+                name: 'Device: ' + otherId.substring(0, 8),
+                manual: true
             }));
 
-            // Navigate to connect page
-            window.location.href = 'connect.html';
+            closeModal('manualModal');
+            setTimeout(() => {
+                window.location.href = 'connect.html';
+            }, 500);
         }
 
         function editDeviceName() {
@@ -456,12 +368,6 @@
             document.getElementById('myDeviceName').textContent = myDeviceName;
             closeModal('nameModal');
         }
-
-        // Cleanup on page close
-        window.addEventListener('beforeunload', () => {
-            if (broadcastInterval) clearInterval(broadcastInterval);
-            if (discoveryInterval) clearInterval(discoveryInterval);
-        });
     </script>
 </body>
 </html>
